hphp/test/zend/good/Zend/tests/bug39003.php.expectf

Catchable fatal error: Argument 1 passed to test() must be an instance of OtherClassName, SomeClassName given in %s/bug39003.php on line 16
